--- a/package.json
+++ b/package.json
@@ -1,26 +1,27 @@
 {
-	"name": "Simple FSRS",
-	"version": "0.2.0",
-	"description": "Simple spaced repetition with FSRS for Obsidian",
-	"main": "main.js",
-	"scripts": {
-		"dev": "node esbuild.config.mjs",
-		"build": "tsc -noEmit -skipLibCheck && node esbuild.config.mjs production",
-		"version": "node scripts/version-bump.mjs && git add manifest.json scripts/versions.json"
-	},
-	"keywords": [],
-	"author": "",
-	"license": "MIT",
-	"devDependencies": {
-		"@codemirror/language": "^6.11.0",
-		"@types/node": "^16.11.6",
-		"@typescript-eslint/eslint-plugin": "5.29.0",
-		"@typescript-eslint/parser": "5.29.0",
-		"builtin-modules": "3.3.0",
-		"esbuild": "0.17.3",
-		"obsidian": "latest",
-		"obsidian-calendar-ui": "0.3.0",
-		"tslib": "2.4.0",
-		"typescript": "4.7.4"
-	}
+  "name": "Simple FSRS",
+  "version": "0.2.1",
+  "description": "Simple spaced repetition with FSRS for Obsidian",
+  "main": "main.js",
+  "scripts": {
+    "dev": "node esbuild.config.mjs",
+    "build": "tsc -noEmit -skipLibCheck && node esbuild.config.mjs production",
+    "version": "node version-bump.mjs",
+    "package": "./release.sh"
+  },
+  "keywords": [],
+  "author": "Ruben Berenguel",
+  "license": "MIT",
+  "devDependencies": {
+    "@codemirror/language": "^6.11.0",
+    "@types/node": "^16.11.6",
+    "@typescript-eslint/eslint-plugin": "5.29.0",
+    "@typescript-eslint/parser": "5.29.0",
+    "builtin-modules": "3.3.0",
+    "esbuild": "0.17.3",
+    "obsidian": "latest",
+    "obsidian-calendar-ui": "0.3.0",
+    "tslib": "2.4.0",
+    "typescript": "4.7.4"
+  }
 }
