--- a/package.json
+++ b/package.json
@@ -7,14 +7,15 @@
     "dev": "node esbuild.config.mjs",
     "build": "tsc -noEmit -skipLibCheck && node esbuild.config.mjs production",
     "version": "node version-bump.mjs",
-    "package": "./release.sh"
+    "package": "./release.sh",
+    "test": "vitest"
   },
   "keywords": [],
   "author": "Ruben Berenguel",
   "license": "MIT",
   "devDependencies": {
     "@codemirror/language": "^6.11.0",
-    "@types/node": "^16.11.6",
+    "@types/node": "^18.19.115",
     "@typescript-eslint/eslint-plugin": "5.29.0",
     "@typescript-eslint/parser": "5.29.0",
     "builtin-modules": "3.3.0",
@@ -22,6 +23,7 @@
     "obsidian": "latest",
     "obsidian-calendar-ui": "0.3.0",
     "tslib": "2.4.0",
-    "typescript": "4.7.4"
+    "typescript": "4.7.4",
+    "vitest": "^3.2.4"
   }
 }
