--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "license": "MIT",
   "devDependencies": {
     "@codemirror/language": "^6.11.0",
+    "@types/js-yaml": "^4.0.9",
     "@types/node": "^18.19.115",
     "@typescript-eslint/eslint-plugin": "5.29.0",
     "@typescript-eslint/parser": "5.29.0",
@@ -25,5 +26,9 @@
     "tslib": "2.4.0",
     "typescript": "4.7.4",
     "vitest": "^3.2.4"
+  },
+  "dependencies": {
+    "js-yaml": "^4.1.0",
+    "moment": "^2.30.1"
   }
 }
